# dex-rs

./: .dexproject  Cargo.toml  README.md
crates/apps/tmux-op/: Cargo.toml
crates/apps/tmux-op/src/: config.rs  languages.rs  main.rs  new_project.rs  project_finder.rs  ui.rs
